# photopi

./: .gitignore  README.md  main.py  nextcloud.py  photopi.kv  pyproject.toml  requirements.txt
photopi/: main.py  photopi.kv  server.py
photopi/camera/: live_preview.py
photopi/config/: __init__.py  config_loader.py  i18n.py  models.py
photopi/gui/: email_screen.py  live_view_screen.py  preview_screen.py  share_screen.py  welcome_screen.py
photopi/lang/: de.json  en.json  keyboard_de.json  keyboard_en.json
photopi/sharing/: base.py  email_service.py  factory.py  nextcloud.py
photopi/templates/: email.html.j2  email.txt.j2  gallery.html  home.html
server/: .env.development  .env.example  server.py
src/camera/: live_preview.py
src/config/: config_loader.py
src/gui/: email_screen.py  live_view_screen.py  welcome_screen.py
src/lang/: de.json  en.json  keyboard.json
