[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "photopi"
dynamic = ["version"]
description = "Photo booth with the Raspberry Pi and the camera module"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [
    { name = "Jonas Barth" }
]
keywords = ["Raspberry Pi", "camera", "photobooth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Natural Language :: German",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
]
dependencies = [
    "Kivy>=2.3.1",
    "kivymd>=1.1.1,<2.0",
    "numpy>=2.2.1",
    "picamera2>=0.3.9",
    "pillow>=11.1.0",
]

[project.urls]
Source = "https://github.com/barthjs/photopi.git"
GitHub = "https://github.com/barthjs/photopi"
Issues = "https://github.com/barthjs/photopi/issues"

[project.scripts]
photopi = "photopi.main:main"

[tool.setuptools]
packages = ["photopi"]

[tool.setuptools.package-data]
photopi = [
    "photopi.kv",
    "lang/*.json",
]
